--- a/scratch/sabri/11-06_sparsity_in_activation.ipynb
+++ b/scratch/sabri/11-06_sparsity_in_activation.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,31 @@
     }
    ],
    "source": [
+    "results = []\n",
     "for model_cls in [MappingModel]:\n",
+    "results = []\n",
+    "for alpha in [0.001, 0.005, 0.01, 0.05, 0.1, 0.5]:\n",
+    "    for num_kv_pairs in tqdm([4, 8, 16, 32, 64, 128, 256]):\n",
+    "        for d_model in [4, 8, 16, 32, 64, 128]:\n",
+    "            metrics, _, meta, _, _ = fit_model(\n",
+    "                num_kv_pairs=num_kv_pairs, \n",
+    "                d_model=d_model, \n",
+    "                model_cls=L1SparseMappingModel,\n",
+    "                num_epochs=800,\n",
+    "                device=\"cuda\",\n",
+    "                alpha=alpha\n",
+    "            )\n",
+    "            results.append(\n",
+    "                {\n",
+    "                    'model': f\"{L1SparseMappingModel.__name__}({alpha})\",\n",
+    "                    'num_kv_pairs': num_kv_pairs,\n",
+    "                    'd_model': d_model,\n",
+    "                    \"norm\": torch.norm(meta[\"x1\"]).item(),\n",
+    "                    **metrics\n",
+    "                }\n",
+    "            )\n",
+    "df = pd.DataFrame(results)\n",
+    "\n",
     "    for num_kv_pairs in tqdm([4, 8, 16, 32, 64, 128, 256]):\n",
     "        for d_model in [4, 8, 16, 32, 64, 128]:\n",
     "            metrics, _, meta, _, _ = fit_model(\n",
