add circuit experiments

--- a/notebooks/test_data.ipynb
+++ b/notebooks/test_data.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# add autoreload\n",
     "%load_ext autoreload\n",
@@ -22,66 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/code/zoology/zoology/data\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(583) tensor(-100)\n",
-      "tensor(5999) tensor(-100)\n",
-      "tensor(1962) tensor(-100)\n",
-      "tensor(5773) tensor(-100)\n",
-      "tensor(1958) tensor(-100)\n",
-      "tensor(6954) tensor(-100)\n",
-      "tensor(3194) tensor(-100)\n",
-      "tensor(6629) tensor(-100)\n",
-      "tensor(1958) tensor(6954)\n",
-      "tensor(780) tensor(-100)\n",
-      "tensor(6806) tensor(-100)\n",
-      "tensor(143) tensor(-100)\n",
-      "tensor(1729) tensor(-100)\n",
-      "tensor(6368) tensor(-100)\n",
-      "tensor(6014) tensor(-100)\n",
-      "tensor(4482) tensor(-100)\n",
-      "tensor(2079) tensor(-100)\n",
-      "tensor(305) tensor(-100)\n",
-      "tensor(3111) tensor(-100)\n",
-      "tensor(253) tensor(-100)\n",
-      "tensor(4161) tensor(-100)\n",
-      "tensor(516) tensor(-100)\n",
-      "tensor(1939) tensor(-100)\n",
-      "tensor(4073) tensor(-100)\n",
-      "tensor(1458) tensor(-100)\n",
-      "tensor(5804) tensor(-100)\n",
-      "tensor(3292) tensor(-100)\n",
-      "tensor(1369) tensor(-100)\n",
-      "tensor(3024) tensor(-100)\n",
-      "tensor(7556) tensor(-100)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from associative_recall import associative_recall\n",
-    "data  = associative_recall()\n",
-    "x= data.train_inputs[0]\n",
-    "y= data.train_labels[0]\n",
-    "\n",
-    "for i, (_x, _y) in enumerate(zip(x, y)):\n",
-    "    if i == 30:\n",
-    "        break\n",
-    "    print(_x, _y)"
+    "sys.path.append(\"/var/cr05_data/sim_data/code/release/zoology/zoology/data/\")\n"
    ]
   },
   {
@@ -89,55 +26,64 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Step 1: Install zoology in the env you are using, using the setup.py file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(583) tensor(-100)\n",
-      "tensor(4898) tensor(-100)\n",
-      "tensor(1962) tensor(-100)\n",
-      "tensor(4671) tensor(-100)\n",
-      "tensor(1958) tensor(-100)\n",
-      "tensor(7947) tensor(-100)\n",
-      "tensor(3194) tensor(-100)\n",
-      "tensor(6084) tensor(-100)\n",
-      "tensor(1962) tensor(4671)\n",
-      "tensor(5096) tensor(-100)\n",
-      "tensor(5725) tensor(-100)\n",
-      "tensor(6249) tensor(-100)\n",
-      "tensor(6204) tensor(-100)\n",
-      "tensor(2841) tensor(-100)\n",
-      "tensor(3194) tensor(6084)\n",
-      "tensor(401) tensor(-100)\n",
-      "tensor(6296) tensor(-100)\n",
-      "tensor(881) tensor(-100)\n",
-      "tensor(7629) tensor(-100)\n",
-      "tensor(2311) tensor(-100)\n",
-      "tensor(3502) tensor(-100)\n",
-      "tensor(7825) tensor(-100)\n",
-      "tensor(3207) tensor(-100)\n",
-      "tensor(910) tensor(-100)\n",
-      "tensor(8025) tensor(-100)\n",
-      "tensor(1454) tensor(-100)\n",
-      "tensor(1236) tensor(-100)\n",
-      "tensor(3014) tensor(-100)\n",
-      "tensor(5794) tensor(-100)\n",
-      "tensor(6338) tensor(-100)\n"
+      "tensor(9) tensor(-100)\n",
+      "tensor(134) tensor(-100)\n",
+      "tensor(52) tensor(-100)\n",
+      "tensor(243) tensor(-100)\n",
+      "tensor(127) tensor(-100)\n",
+      "tensor(159) tensor(-100)\n",
+      "tensor(25) tensor(-100)\n",
+      "tensor(182) tensor(-100)\n",
+      "tensor(41) tensor(-100)\n",
+      "tensor(139) tensor(-100)\n",
+      "tensor(101) tensor(-100)\n",
+      "tensor(136) tensor(-100)\n",
+      "tensor(74) tensor(-100)\n",
+      "tensor(176) tensor(-100)\n",
+      "tensor(49) tensor(-100)\n",
+      "tensor(153) tensor(-100)\n",
+      "tensor(52) tensor(243)\n",
+      "tensor(176) tensor(-100)\n",
+      "tensor(119) tensor(-100)\n",
+      "tensor(56) tensor(-100)\n",
+      "tensor(25) tensor(182)\n",
+      "tensor(21) tensor(-100)\n",
+      "tensor(236) tensor(-100)\n",
+      "tensor(206) tensor(-100)\n",
+      "tensor(41) tensor(139)\n",
+      "tensor(75) tensor(-100)\n",
+      "tensor(9) tensor(134)\n",
+      "tensor(129) tensor(-100)\n",
+      "tensor(113) tensor(-100)\n",
+      "tensor(166) tensor(-100)\n"
      ]
     }
    ],
    "source": [
+    "# Step 2: Import the data you want to inspect\n",
+    "\n",
     "from associative_recall import multiquery_ar\n",
-    "data  = multiquery_ar()\n",
-    "x= data.train_inputs[0]\n",
-    "y= data.train_labels[0]\n",
+    "data  = multiquery_ar(\n",
+    "    vocab_size=256,\n",
+    "    num_examples=10,\n",
+    "    input_seq_len=128,\n",
+    "    seed=0,\n",
+    ")\n",
+    "x= data.inputs[0]\n",
+    "y= data.labels[0]\n",
     "\n",
     "for i, (_x, _y) in enumerate(zip(x, y)):\n",
     "    if i == 30:\n",
@@ -151,6 +97,103 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lengths: 4, 4\n",
+      "\n",
+      "0 -100\n",
+      "1 -100\n",
+      "1 -100\n",
+      "2 0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parity dataset\n",
+    "\n",
+    "from circuits import parity\n",
+    "\n",
+    "import random\n",
+    "random_number = random.randint(0, 1000)\n",
+    "\n",
+    "input_seq_len=4\n",
+    "data  = parity(\n",
+    "    vocab_size=256,\n",
+    "    num_examples=10,\n",
+    "    input_seq_len=input_seq_len,\n",
+    "    seed=random_number,\n",
+    ")\n",
+    "x= data.inputs[0]\n",
+    "y= data.labels[0]\n",
+    "\n",
+    "print(f\"Lengths: {len(x)}, {len(y)}\\n\")\n",
+    "num_one = 0\n",
+    "for i, (_x, _y) in enumerate(zip(x, y)):\n",
+    "    if _x.item() == 1:\n",
+    "        num_one += 1\n",
+    "    print(_x.item(), _y.item())\n",
+    "\n",
+    "print(num_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lengths: 7, 7\n",
+      "\n",
+      "1 1\n",
+      "1 0\n",
+      "1 1\n",
+      "0 1\n",
+      "1 0\n",
+      "0 0\n",
+      "0 0\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parity dataset\n",
+    "\n",
+    "from circuits import cumulative_parity\n",
+    "\n",
+    "import random\n",
+    "random_number = random.randint(0, 1000)\n",
+    "\n",
+    "input_seq_len=8\n",
+    "data  = cumulative_parity(\n",
+    "    vocab_size=256,\n",
+    "    num_examples=10,\n",
+    "    input_seq_len=input_seq_len,\n",
+    "    seed=random_number,\n",
+    ")\n",
+    "x= data.inputs[0]\n",
+    "y= data.labels[0]\n",
+    "\n",
+    "print(f\"Lengths: {len(x)}, {len(y)}\\n\")\n",
+    "num_one = 0\n",
+    "for i, (_x, _y) in enumerate(zip(x, y)):\n",
+    "    if _x.item() == 1:\n",
+    "        num_one += 1\n",
+    "    print(_x.item(), _y.item())\n",
+    "\n",
+    "print(num_one)"
+   ]
   },
   {
    "cell_type": "code",
