add two mqar variants, add ttt model

--- a/notebooks/test_data.ipynb
+++ b/notebooks/test_data.ipynb
@@ -18,12 +18,12 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/var/cr05_data/sim_data/code/release/zoology/zoology/data/\")\n"
+    "sys.path.append(\"/home/simarora/code/zoology/zoology/data/\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9, -100\n",
+      "134, -100\n",
+      "52, -100\n",
+      "243, -100\n",
+      "127, -100\n",
+      "159, -100\n",
+      "25, -100\n",
+      "182, -100\n",
+      "52, -100\n",
+      "221, -100\n",
+      "25, -100\n",
+      "174, -100\n",
+      "9, -100\n",
+      "142, -100\n",
+      "127, -100\n",
+      "243, -100\n",
+      "9, 142\n",
+      "234, -100\n",
+      "127, 243\n",
+      "142, -100\n",
+      "52, 221\n",
+      "2, -100\n",
+      "25, 174\n",
+      "238, -100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Import the data you want to inspect\n",
+    "\n",
+    "from forgetting_ar import forgetting_mqar\n",
+    "data  = forgetting_mqar(\n",
+    "    vocab_size=256,\n",
+    "    num_examples=10,\n",
+    "    input_seq_len=24,\n",
+    "    num_kv_pairs=4,\n",
+    "    seed=0,\n",
+    ")\n",
+    "x= data.inputs[0]\n",
+    "y= data.labels[0]\n",
+    "\n",
+    "for i, (_x, _y) in enumerate(zip(x, y)):\n",
+    "    if i == 30:\n",
+    "        break\n",
+    "    print(f\"{_x.item()}, {_y.item()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,19 +126,19 @@
       "tensor(49) tensor(-100)\n",
       "tensor(153) tensor(-100)\n",
       "tensor(52) tensor(243)\n",
-      "tensor(176) tensor(-100)\n",
-      "tensor(119) tensor(-100)\n",
-      "tensor(56) tensor(-100)\n",
-      "tensor(25) tensor(182)\n",
-      "tensor(21) tensor(-100)\n",
-      "tensor(236) tensor(-100)\n",
       "tensor(206) tensor(-100)\n",
+      "tensor(133) tensor(-100)\n",
+      "tensor(36) tensor(-100)\n",
+      "tensor(25) tensor(182)\n",
+      "tensor(235) tensor(-100)\n",
+      "tensor(89) tensor(-100)\n",
+      "tensor(99) tensor(-100)\n",
       "tensor(41) tensor(139)\n",
-      "tensor(75) tensor(-100)\n",
+      "tensor(195) tensor(-100)\n",
       "tensor(9) tensor(134)\n",
-      "tensor(129) tensor(-100)\n",
-      "tensor(113) tensor(-100)\n",
-      "tensor(166) tensor(-100)\n"
+      "tensor(182) tensor(-100)\n",
+      "tensor(133) tensor(-100)\n",
+      "tensor(79) tensor(-100)\n"
      ]
     }
    ],
@@ -89,6 +159,62 @@
     "    if i == 30:\n",
     "        break\n",
     "    print(_x, _y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31, -100\n",
+      "98, -100\n",
+      "255, -100\n",
+      "41, -100\n",
+      "98, -100\n",
+      "241, -100\n",
+      "41, -100\n",
+      "99, -100\n",
+      "202, -100\n",
+      "31, -100\n",
+      "99, -100\n",
+      "232, -100\n",
+      "41, -100\n",
+      "99, 202\n",
+      "163, -100\n",
+      "31, -100\n",
+      "98, 255\n",
+      "241, -100\n",
+      "41, -100\n",
+      "98, 241\n",
+      "188, -100\n",
+      "31, -100\n",
+      "99, 232\n",
+      "141, -100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Import the data you want to inspect\n",
+    "\n",
+    "from compositional_ar import compositional_mqar\n",
+    "data  = compositional_mqar(\n",
+    "    vocab_size=256,\n",
+    "    num_examples=10,\n",
+    "    input_seq_len=24,\n",
+    "    num_kv_pairs=4,\n",
+    "    seed=0,\n",
+    ")\n",
+    "x= data.inputs[0]\n",
+    "y= data.labels[0]\n",
+    "\n",
+    "for i, (_x, _y) in enumerate(zip(x, y)):\n",
+    "    if i == 30:\n",
+    "        break\n",
+    "    print(f\"{_x.item()}, {_y.item()}\")"
    ]
   },
   {
@@ -205,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
